# autodiff

./: .gitignore  CMakeLists.txt  Dockerfile  LinearModel  OptimizerLinearTest  README.md  autodiff.hpp  autodiff.hpp.orig  dockerignore  function-generator.py  instruction_plot.txt  neural.hpp  plot_approximation.py  plot_hidden_sweep.py  plot_models.py  plot_performance.py  run_interactive.sh  test.cpp  test_models
docs/: autodiff_reverse_main.drawio
docs/autodiff/: autodiff_reverse_idea.drawio  autodiff_reverse_main.drawio
docs/ml/: README.md
docs/model/: README.md
include/autodiff/forward/: CudaSupport.hpp  Differentiator.hpp  DualVar.hpp  EigenSupport.hpp  ForwardDifferentiator.hpp  ForwardEigenSupport.hpp  ForwardUtility.hpp  Jacobian.hpp  JacobianTraits.hpp
include/autodiff/reverse/: ArenaAllocator.hpp  DerivativeUtility.hpp  EigenSupport.hpp  Functions.hpp  Makefile  Node.hpp  NodeManager.hpp  ReverseEigenSupport.hpp  ReverseUtility.hpp  Var.hpp  utils.hpp
include/examples/ml/models/: IModel.h  LinearModel.h  LinearModelParallel.h  NeuralModel.h  NeuralModel2.h  NeuralModelOpenmp.h  NeuralModelOptimized.h  NeuralModelOptimized1.h  TwoLayerNeurals.h
include/examples/ml/optimizer/: Adam.h  Optimizer.h  SGD.h  SGDWithMomentum.h
include/examples/newton/: Jacobian.hpp  JacobianTraits.hpp  Newton.hpp
include/models/: LinearModel.h  LinearModelParallel.h  NeuralModel.h  NeuralModelOpenmp.h  NeuralModelOptimized.h
include/newton/: Jacobian.hpp  Newton.hpp
src/autodiff/forward/: CudaSupport.hpp  Differentiator.cpp  DualVar.hpp  EigenSupport.hpp  Makefile  autodiff.hpp  example-functions.hpp  test-cuda-jac.cpp  test-cuda-jac.cu  test-jacobian.cpp
src/autodiff/reverse/: ArenaAllocator.cpp  ArenaAllocator.hpp  DerivativeUtility.hpp  EigenSupport.hpp  Functions.hpp  Makefile  Node.hpp  NodeManager.hpp  Tape.hpp  Var.hpp  test  test.cpp  test_arena.cpp  utils.hpp
src/examples/linear_model/: LinearModel  LinearModel.h
src/examples/ml/models/: NeuralModel.cpp  NeuralModelOptimized.cpp  NeuralTest.cpp  spantest.cpp
src/examples/models/: IModel.h  LinearModel.h  LinearModelParallel.h  NeuralHiddenSizeComparison.cpp  NeuralModel.h  NeuralSweepTest.cpp  NeuralTest.cpp  TwoLayerNeurals.h  linear_neural_comparison.cpp  spantest.cpp  test_models.cpp
src/examples/newton/: Jacobian.cpp  Jacobian.hpp  Newton.cpp  Newton.hpp  NewtonTraits.hpp  example-functions.hpp  test-cuda-jac.cpp  test-cuda-jac.cu  test-jacobian.cpp  test-newton.cpp  test.cpp
src/examples/optimizer/: Adam.h  Optimizer.h  SGDWithMomentum.h
src/forward/: Differentiator.h  DualOps.h  DualVar.h  LinearModel.cpp  LinearModel.h  LinearModelParallel.h  NewtonSolver.h  NewtonTraits.hpp  autodiff.hpp  test.cpp  utils.hpp
src/optimizer/: Optimizer.h  SGD.h  SGDWithMomentum.h
src/reverse/: Functions.hpp  Node.hpp  NodeManager.hpp  Tape.hpp  Var.hpp  autodiff.hpp  neural.hpp  test  test.cpp  utils.hpp
test/: arena_allocator_test.cpp  dualvar_test.cpp  forward_differentiator_test.cpp  forward_utility_test.cpp  newton_test.cpp  reverse_utility_test.cpp  var_test.cpp
test/jacobian/: function-generator.py  test-cuda-jac.cpp  test-jacobian.cpp
test/model/: NeuralTest.cpp  OptimizerLinearTest.cpp  spanModelSizeTest.cpp  spantest.cpp
